# strands_perception_people

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
bayes_people_tracker/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
bayes_people_tracker/config/: default.rviz  detectors.yaml  detectors_test.yaml  detectors_with_mobility_aids.yaml  mobility_aid_detector_only.yaml
bayes_people_tracker/launch/: people_tracker.launch  people_tracker_test.launch
bayes_people_tracker/msg/: PeopleStamped.msg  PeopleTracker.msg
bayes_people_tracker/scripts/: test_publisher.py
bayes_people_tracker/share/: people_tracker_rule.bmr
bayes_people_tracker_logging/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
bayes_people_tracker_logging/launch/: logging.launch
bayes_people_tracker_logging/msg/: Logging.msg  PeopleTrackerLogging.msg
bayes_people_tracker_logging/scripts/: migrate.py  save_locations.py
detector_msg_to_pose_array/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
detector_msg_to_pose_array/config/: detectors.yaml
detector_msg_to_pose_array/launch/: to_pose_array.launch
detector_msg_to_pose_array/scripts/: to_pose_array.py
ground_plane_estimation/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
ground_plane_estimation/config/: estimated_gp.yaml
ground_plane_estimation/launch/: ground_plane_estimated.launch  ground_plane_fixed.launch  ground_plane_fixed_no_ptu.launch
ground_plane_estimation/src/: estimated_gp.cpp  fixed_gp.cpp  fixed_gp_no_ptu.cpp
human_trajectory/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
human_trajectory/launch/: human_trajectory.launch
human_trajectory/msg/: Trajectories.msg  Trajectory.msg
human_trajectory/scripts/: people_trajectory_updater.py  traj_visualisation.py  trajectories_to_file.py  trajectory_publisher.py
mdl_people_tracker/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
mdl_people_tracker/config/: mdl_people_tracker.yaml
mdl_people_tracker/include/: AncillaryMethods.h  Camera.h  Detections.h  Hypo.h  Kalman.h
mdl_people_tracker/launch/: mdl_people_tracker.launch  mdl_people_tracker_no_HOG.launch  mdl_people_tracker_with_HOG.launch
mdl_people_tracker/msg/: MdlPeopleTracker.msg  MdlPeopleTrackerArray.msg
mdl_people_tracker/src/: AncillaryMethods.cpp  Camera.cpp  Detections.cpp  EKalman.cpp  Hypo.cpp  Tracker.cpp  main.cpp
odometry_to_motion_matrix/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
odometry_to_motion_matrix/launch/: odom2visual.launch  tf2visual.launch
opencv_warco/: CHANGELOG.rst  CMakeLists.txt  package.xml
opencv_warco/opencv-warco/: CMakeLists.txt  README.md  covcorr.cpp  covcorr.hpp  cvutils.cpp  cvutils.hpp  dists.cpp  dists.hpp  features.cpp  filterbank.cpp  mainutils.cpp  mainutils.hpp  model.cpp  model.hpp  pred.cpp  save_covs.cpp  save_dists.cpp  traintest.cpp  utest.cpp  warco.cpp  warco.hpp
people_tracker_emulator/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
people_tracker_emulator/scripts/: posestamped_to_ppl_tracker_msgs.py
people_tracker_filter/: CHANGELOG.rst  CMakeLists.txt  package.xml
people_tracker_filter/launch/: filter.launch
people_tracker_filter/src/: filter.cpp
perception_people_launch/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception_people_launch/attic/: README.md  people_tracker_robot_with_HOG.launch  people_tracker_standalone_with_HOG.launch
perception_people_launch/launch/: pedestrian_tracker_robot.launch  pedestrian_tracker_robot_with_HOG.launch  people_tracker_robot.launch  people_tracker_robot_with_HOG.launch  people_tracker_standalone.launch  people_tracker_standalone_with_HOG.launch
rwth_upper_body_skeleton_random_walk/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
rwth_upper_body_skeleton_random_walk/Model/: ModeWeights_tree_1  ModeWeights_tree_2  ModeWeights_tree_3  ModeWeights_tree_4  ModeWeights_tree_5  ModeWeights_tree_6  ModeWeights_tree_7  ModeWeights_tree_8  ModeWeights_tree_9  Modes_tree_1  Modes_tree_2  Modes_tree_3  Modes_tree_4  Modes_tree_5  Modes_tree_6  Modes_tree_7  Modes_tree_8  Modes_tree_9  SplitNodes_tree_1  SplitNodes_tree_2  SplitNodes_tree_3  SplitNodes_tree_4  SplitNodes_tree_5  SplitNodes_tree_6  SplitNodes_tree_7  SplitNodes_tree_8  SplitNodes_tree_9
rwth_upper_body_skeleton_random_walk/include/: bodypose_regressor_utilities.h  datatypes.h  forest_utilities.h  mean_shift_utilities.h  tree_utilities.h
rwth_upper_body_skeleton_random_walk/launch/: fixed.launch
rwth_upper_body_skeleton_random_walk/msg/: SkeletonDetector.msg
rwth_upper_body_skeleton_random_walk/src/: body_pose_regressor_utilities.cpp  forest_utilities.cpp  mean_shift_utilities.cpp  tree_utilities.cpp  upper_body_skeleton_random_walk_node.cpp
strands_head_orientation/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
strands_head_orientation/launch/: .head_orientation.launch.swo  g4s.launch  head_orientation.launch
strands_head_orientation/msg/: HeadOrientations.msg
strands_head_orientation/src/: main.cpp  start.cpp  status.cpp  stop.cpp  store_detections.cpp
strands_head_orientation/srv/: IsHeadAnalysisRunning.srv
strands_perception_people/: CHANGELOG.rst  CMakeLists.txt  package.xml
strands_perception_people_3rd_party/: .gitignore  CMakeLists.txt  package.xml
strands_perception_people_3rd_party/libcudaHOG/: custom_make.sh.in  rpath_patch.sh.in
strands_perception_people_launch/: CMakeLists.txt  README.md  package.xml
strands_perception_people_launch/launch/: pedestrian_tracker.launch  pedestrian_tracker_fixed_GP.launch  pedestrian_tracker_fixed_GP_no_HOG.launch  pedestrian_tracker_no_HOG.launch  pedestrian_tracker_robot.launch  pedestrian_tracker_robot_with_HOG.launch  pedestrian_tracker_standalone.launch  pedestrian_tracker_standalone_with_HOG.launch
strands_perception_people_msgs/: CMakeLists.txt  package.xml
strands_perception_people_msgs/msg/: Logging.msg  PedestrianLocations.msg  PedestrianTracking.msg  (+1 more)
upper_body_detector/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
(+210 files in other folders)
