<?xml version="1.0"?>
<package>
  <name>bayes_people_tracker</name>
  <version>1.3.1</version>
  <description>The bayes_people_tracker package</description>

  <maintainer email="cdondrup@lincoln.ac.uk">Christian Dondrup</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/strands-project/strands_perception_people</url> 

  <author email="cdondrup@lincoln.ac.uk">Christian Dondrup</author> 

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>bayes_tracking</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>people_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>bayes_tracking</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>people_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>rosbag_migration_rule</run_depend>

  <export>
      <rosbag_migration_rule rule_file="share/people_tracker_rule.bmr"/>
  </export>
</package>
