<?xml version="1.0"?>
<package>
  <name>bayes_people_tracker_logging</name>
  <version>1.3.0</version>
  <description>The bayes_people_tracker_logging package</description>

  <maintainer email="cdondrup@lincoln.ac.uk">Christian Dondrup</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/strands-project/strands_perception_people</url> 

  <author email="cdondrup@lincoln.ac.uk">Christian Dondrup</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>bayes_people_tracker</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>mongodb_store</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>mdl_people_tracker</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>upper_body_detector</build_depend>
  
  <run_depend>bayes_people_tracker</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>mongodb_store</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>mdl_people_tracker</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>upper_body_detector</run_depend>

  <export/>
</package>
