<?xml version="1.0"?>
<package>
  <name>human_trajectory</name>
  <version>1.3.1</version>
  <description>A package that stitch human poses together to create a trajectory for the human</description>

  <maintainer email="fxj345@cs.bham.ac.uk">Ferdian Jovan</maintainer>

  <license>MIT</license>


  <url type="website">https://github.com/strands-project/strands_perception_people</url>

  <author email="fxj345@cs.bham.ac.uk">Ferdian Jovan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>strands_navigation_msgs</build_depend>
  <build_depend>mongodb_store</build_depend>
  <build_depend>bayes_people_tracker</build_depend>
  <build_depend>topological_logging_manager</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>strands_navigation_msgs</run_depend>
  <run_depend>mongodb_store</run_depend>
  <run_depend>python-pymongo</run_depend>
  <run_depend>bayes_people_tracker</run_depend>
  <run_depend>topological_logging_manager</run_depend>

  <export>
  </export>
</package>
