<?xml version="1.0"?>
<package>
  <name>odometry_to_motion_matrix</name>
  <version>1.10.0</version>
  <description>The odometry_to_motion_matrix package</description>

  <maintainer email="marc@hanheide.net">Marc Hanheide</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/strands-project/strands_perception_people</url> 

  <author email="cdondrup@lincoln.ac.uk">Christian Dondrup</author> 

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>visual_odometry</build_depend>
  
  <run_depend>eigen</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>visual_odometry</run_depend>

  <export/>
</package>
