<?xml version="1.0"?>
<package>
  <name>opencv_warco</name>
  <version>1.5.0</version>
  <description>Library to perform head-pose classification using the WARCO method.</description>

  <maintainer email="beyer@vision.rwth-aachen.de">Lucas Beyer</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <license>MIT</license>

  <url type="website">https://github.com/lucasb-eyer/opencv-warco</url>

  <author email="beyer@vision.rwth-aachen.de">Lucas Beyer</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>cv_bridge</run_depend>

  <export/>
</package>
