<?xml version="1.0"?>
<package>
  <name>people_tracker_emulator</name>
  <version>1.2.0</version>
  <description>The people_tracker_emulator package</description>

  <maintainer email="cdondrup@lincoln.ac.uk">Christian Dondrup</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/strands-project/strands_perception_people</url>

  <author email="cdondrup@lincoln.ac.uk">Christian Dondrup</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>bayes_people_tracker</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>people_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>bayes_people_tracker</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>people_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>


  <export/>
</package>