<?xml version="1.0"?>
<package>
  <name>perception_people_launch</name>
  <version>0.0.0</version>
  <description>The perception_people_launch package</description>

  <maintainer email="cdondrup@lincoln.ac.uk">Christian Dondrup</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/strands-project/strands_perception_people</url>

  <author email="cdondrup@lincoln.ac.uk">Christian Dondrup</author>
  <author email="mitzel@umic.rwth-aachen.de">Dennis Mitzel</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>odometry_to_motion_matrix</run_depend>
  <run_depend>ground_plane_estimation</run_depend>
  <run_depend>upper_body_detector</run_depend>
  <run_depend>mdl_people_tracker</run_depend>
  <run_depend>bayes_people_tracker</run_depend>
  <run_depend>detector_msg_to_pose_array</run_depend>
  <run_depend>leg_detector</run_depend>
  <run_depend>people_msgs</run_depend>
  <run_depend>bayes_people_tracker_logging</run_depend>
  <!--<run_depend>strands_ground_hog</run_depend>-->

  <export/>
</package>
